feat: add style header

--- a/singolo1.html
+++ b/singolo1.html
@@ -8,7 +8,7 @@
 <body>
 <header class="header">
     <div class="wrapper">
-        <h1><a href="#" class="logo">Singolo</a></h1>
+        <h1><a href="#" class="logo">Singolo<span class="header__color">*</span></a></h1>
         <nav class="header__navigation">
             <ul class="navigation">
                 <li>Home</li>
