--- a/singolo1.html
+++ b/singolo1.html
@@ -11,11 +11,11 @@
         <h1><a href="#" class="logo">Singolo<span class="header__color">*</span></a></h1>
         <nav class="header__navigation">
             <ul class="navigation">
-                <li>Home</li>
-                <li>Services</li>
-                <li>Portfolio</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li class="activ_li item">Home</li>
+                <li class="item">Services</li>
+                <li class="item">Portfolio</li>
+                <li class="item">About</li>
+                <li class="item">Contact</li>
             </ul>
         </nav>
     </div>
