style: add style slider

--- a/singolo1.html
+++ b/singolo1.html
@@ -24,18 +24,16 @@
 <section class="slider">
     <div class="wrapper">
         <div class="slider__left">
-            <img src="" alt="">
+            <img src="assets/image/chev.png" alt="">
         </div>
-        <div class="slider__content">
-            <div class="content-image">
-                <img src="" alt="">
-            </div>
-            <div class="content-image">
-                <img src="" alt="">
-            </div>
+        <div class="content-image-left">
+            <img src="assets/image/iPhone_Vertical.png" alt="">
+        </div>
+        <div class="content-image-right">
+            <img src="assets/image/iPhone_Horizontal.png" alt="">
         </div>
         <div class="slider__right">
-            <img src="" alt="">
+            <img src="assets/image/chev.png" alt="">
         </div>
     </div>
 </section>
