feat: add style singolo2 and create html

--- a/singolo2.html
+++ b/singolo2.html
@@ -25,40 +25,40 @@
             </div>
             <div class="portfolio__img">
                 <div class="img">
-                    <img class="p1" alt="" width="220" height="187">
+                    <svg class="p1" alt="" width="220" height="187"></svg>
                 </div>
                 <div class="img">
-                    <img class="p2" alt="" width="220" height="187">
+                    <svg class="p2" alt="" width="220" height="187"></svg>
                 </div>
                 <div class="img">
-                    <img class="p3" alt="" width="220" height="187">
+                    <svg class="p3" alt="" width="220" height="187"></svg>
                 </div>
                 <div class="img">
-                    <img class="p4" alt="" width="220" height="187">
+                    <svg class="p4" alt="" width="220" height="187"></svg>
                 </div>
                 <div class="img">
-                    <img class="p5" alt="" width="220" height="187">
+                    <svg class="p5" alt="" width="220" height="187"></svg>
                 </div>
                 <div class="img">
-                    <img class="p6" alt="" width="220" height="187">
+                    <svg class="p6" alt="" width="220" height="187"></svg>
                 </div>
                 <div class="img">
-                    <img class="p7" alt="" width="220" height="187">
+                    <svg class="p7" alt="" width="220" height="187"></svg>
                 </div>
                 <div class="img">
-                    <img class="p8" alt="" width="220" height="187">
+                    <svg class="p8" alt="" width="220" height="187"></svg>
                 </div>
                 <div class="img">
-                    <img class="p9" alt="" width="220" height="187">
+                    <svg class="p9" alt="" width="220" height="187"></svg>
                 </div>
                 <div class="img">
-                    <img class="p10" alt="" width="220" height="187">
+                    <svg class="p10" alt="" width="220" height="187"></svg>
                 </div>
                 <div class="img">
-                    <img class="p11" alt="" width="220" height="187">
+                    <svg class="p11" alt="" width="220" height="187"></svg>
                 </div>
                 <div class="img">
-                    <img class="p12" alt="" width="220" height="187">
+                    <svg class="p12" alt="" width="220" height="187"></svg>
                 </div>
             </div>
         </div>
@@ -69,51 +69,51 @@
         <div class="about-us">
             <h2 class="about-us__header-text">About Us</h2>
             <p class="about-as__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh. </p>
-        </div>
-        <div class="content">
-            <div class="about-as__content">
-                <img src="" alt="" width="220" height="187">
-                <div class="content__blc">
-                    <h4 class="blc__head-text">Adam Jensen </h4>
-                    <p class="blc__text">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem. </p>
+            <div class="content">
+                <div class="about-as__content">
+                    <img src="assets/image/photo2.png" alt="" width="300" height="300">
+                    <div class="content__blc">
+                        <h4 class="blc__head-text">Adam Jensen </h4>
+                        <p class="blc__text">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem. </p>
+                    </div>
+                    <div class="content__social">
+                        <ul class="social">
+                            <li class="social__item"><img src="assets/image/Facebook.png" alt=""></li>
+                            <li class="social__item"><img src="assets/image/Google.png" alt=""></li>
+                            <li class="social__item"><img src="assets/image/Twitter.png" alt=""></li>
+                            <li class="social__item"><img src="assets/image/LinkedIn.png" alt=""></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="content__social">
-                    <ul class="social">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
+                <div class="about-as__content">
+                    <img src="assets/image/photo1.png" alt="" width="300" height="300">
+                    <div class="content__blc">
+                        <h4 class="blc__head-text">Desmond Miles</h4>
+                        <p class="blc__text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit. </p>
+                    </div>
+                    <div class="content__social">
+                        <ul class="social">
+                            <li class="social__item"><img src="assets/image/Facebook.png" alt=""></li>
+                            <li class="social__item"><img src="assets/image/Google.png" alt=""></li>
+                            <li class="social__item"><img src="assets/image/Twitter.png" alt=""></li>
+                            <li class="social__item"><img src="assets/image/LinkedIn.png" alt=""></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="about-as__content">
-                <img src="" alt="" width="220" height="187">
-                <div class="content__blc">
-                    <h4 class="blc__head-text">Desmond Miles</h4>
-                    <p class="blc__text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit. </p>
-                </div>
-                <div class="content__social">
-                    <ul class="social">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="about-as__content">
-                <img src="" alt="" width="220" height="187">
-                <div class="content__blc">
-                    <h4 class="blc__head-text">Scolara Visari</h4>
-                    <p class="blc__text">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
-                </div>
-                <div class="content__social">
-                    <ul class="social">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
+                <div class="about-as__content">
+                    <img src="assets/image/photo.png" alt="" width="300" height="300">
+                    <div class="content__blc">
+                        <h4 class="blc__head-text">Scolara Visari</h4>
+                        <p class="blc__text">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+                    </div>
+                    <div class="content__social">
+                        <ul class="social">
+                            <li class="social__item"><img src="assets/image/Facebook.png" alt=""></li>
+                            <li class="social__item"><img src="assets/image/Google.png" alt=""></li>
+                            <li class="social__item"><img src="assets/image/Twitter.png" alt=""></li>
+                            <li class="social__item"><img src="assets/image/LinkedIn.png" alt=""></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
