--- a/singolo2.html
+++ b/singolo2.html
@@ -17,10 +17,10 @@
             </p>
             <div class="portfolio__tags">
                 <ul class="tags">
-                    <li class="bottom active">All</li>
-                    <li class="bottom">Web Design</li>
-                    <li class="bottom">Graphic Design</li>
-                    <li class="bottom">Artwork</li>
+                    <li><a class="bottom active" href="#">All</a></li>
+                    <li><a class="bottom" href="#">Web Design</a></li>
+                    <li><a class="bottom" href="#">Graphic Design</a></li>
+                    <li><a class="bottom" href="#">Artwork</a></li>
                 </ul>
             </div>
             <div class="portfolio__img">
@@ -67,6 +67,7 @@
 <section>
     <div class="wrapper">
         <div class="about-us">
+            <div class="about-us__content">
             <h2 class="about-us__header-text">About Us</h2>
             <p class="about-as__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh. </p>
             <div class="content">
@@ -115,6 +116,7 @@
                         </ul>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </div>
