feat: edit style

--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
 </head>
 <body>
 <header class="header">
-    <div class="wrapper">
+    <div class="wrapper header__wrapper">
         <h1><a href="#" class="logo">Singolo<span class="header__color">*</span></a></h1>
         <nav class="header__navigation">
             <ul class="navigation">
-                <li class="activ_li item">Home</li>
-                <li class="item">Services</li>
-                <li class="item">Portfolio</li>
-                <li class="item">About</li>
-                <li class="item">Contact</li>
+                <li class="navigation__link navigation__active item">Home</li>
+                <li class="navigation__link item">Services</li>
+                <li class="navigation__link item">Portfolio</li>
+                <li class="navigation__link item">About</li>
+                <li class="navigation__link">Contact</li>
             </ul>
         </nav>
     </div>
 </header>
 
 <section class="slider">
-    <div class="wrapper">
+    <div class="wrapper header__slider">
         <div class="slider__left">
             <img src="assets/image/chev.png" alt="">
         </div>
         <div class="content-image-left">
-            <img src="assets/image/iPhone_Vertical.png" alt="">
+            <img src="assets/img/phone-vertical.svg" alt="">
         </div>
         <div class="content-image-right">
-            <img src="assets/image/iPhone_Horizontal.png" alt="">
+            <img src="assets/img/phone-horizontal.svg" alt="">
         </div>
         <div class="slider__right">
             <img src="assets/image/chev.png" alt="">
