feat: add size scren 768px

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <img src="assets/image/chev.png" alt="">
         </div>
         <div class="content-image-left">
-            <img src="assets/img/phone-vertical.svg" alt="">
+            <img class="content__image-size-left" src="assets/img/phone-vertical.svg" alt="">
         </div>
         <div class="content-image-right">
-            <img src="assets/img/phone-horizontal.svg" alt="">
+            <img class="content__image-size-right" src="assets/img/phone-horizontal.svg" alt="">
         </div>
         <div class="slider__right">
             <img src="assets/image/chev.png" alt="">
@@ -88,6 +88,7 @@
         </div>
     </div>
 </section>
+
 <section>
     <div class="wrapper">
         <div class="portfolio">
@@ -154,7 +155,7 @@
                 <p class="about-as__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh. </p>
                 <div class="content">
                     <div class="about-as__content">
-                        <img src="assets/image/photo2.png" alt="" width="300" height="300">
+                        <img class="about-us__img-size" src="assets/image/photo2.png" alt="" width="300" height="300">
                         <div class="content__blc">
                             <h4 class="blc__head-text">Adam Jensen </h4>
                             <p class="blc__text">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem. </p>
@@ -169,7 +170,7 @@
                         </div>
                     </div>
                     <div class="about-as__content">
-                        <img src="assets/image/photo1.png" alt="" width="300" height="300">
+                        <img class="about-us__img-size" src="assets/image/photo1.png" alt="" width="300" height="300">
                         <div class="content__blc">
                             <h4 class="blc__head-text">Desmond Miles</h4>
                             <p class="blc__text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit. </p>
@@ -184,7 +185,7 @@
                         </div>
                     </div>
                     <div class="about-as__content">
-                        <img src="assets/image/photo.png" alt="" width="300" height="300">
+                        <img class="about-us__img-size" src="assets/image/photo.png" alt="" width="300" height="300">
                         <div class="content__blc">
                             <h4 class="blc__head-text">Scolara Visari</h4>
                             <p class="blc__text">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
