--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
 </head>
 <body>
 <header class="header">
-    <div class="wrapper header__wrapper">
+    <div class="wrapper header__wrapper ">
+        <div class="hamburger-menu full">
+            <input id="menu__toggle" type="checkbox" />
+            <label class="menu__btn" for="menu__toggle">
+                <span></span>
+            </label>
+            <ul class="menu__box">
+                <li><a class="menu__item" href="#">Home</a></li>
+                <li><a class="menu__item" href="#">Services</a></li>
+                <li><a class="menu__item" href="#">Portfolio</a></li>
+                <li><a class="menu__item" href="#">About</a></li>
+                <li><a class="menu__item" href="#">Contact</a></li>
+            </ul>
+        </div>
         <h1><a href="#" class="logo">Singolo<span class="header__color">*</span></a></h1>
-        <nav class="header__navigation">
+        <nav class="header__navigation mobile">
             <ul class="navigation">
                 <li class="navigation__link navigation__active item">Home</li>
                 <li class="navigation__link item">Services</li>
@@ -19,6 +32,7 @@
             </ul>
         </nav>
     </div>
+
 </header>
 
 <section class="slider">
@@ -155,7 +169,7 @@
                 <p class="about-as__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh. </p>
                 <div class="content">
                     <div class="about-as__content">
-                        <img class="about-us__img-size" src="assets/image/photo2.png" alt="" width="300" height="300">
+                        <img class="about-us__img-size" src="assets/image/photo2.png" alt="">
                         <div class="content__blc">
                             <h4 class="blc__head-text">Adam Jensen </h4>
                             <p class="blc__text">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem. </p>
@@ -170,7 +184,7 @@
                         </div>
                     </div>
                     <div class="about-as__content">
-                        <img class="about-us__img-size" src="assets/image/photo1.png" alt="" width="300" height="300">
+                        <img class="about-us__img-size" src="assets/image/photo1.png" alt="">
                         <div class="content__blc">
                             <h4 class="blc__head-text">Desmond Miles</h4>
                             <p class="blc__text">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit. </p>
@@ -185,7 +199,7 @@
                         </div>
                     </div>
                     <div class="about-as__content">
-                        <img class="about-us__img-size" src="assets/image/photo.png" alt="" width="300" height="300">
+                        <img class="about-us__img-size" src="assets/image/photo.png" alt="">
                         <div class="content__blc">
                             <h4 class="blc__head-text">Scolara Visari</h4>
                             <p class="blc__text">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
